# Machine

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEX_INSTRUCTIONS.md  HANDOFF.md  PRODUCT_BRIEF.md  PROJECT_FOUNDATION.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  pages.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: scout.py  status.py
backend/app/core/: config.py  http_errors.py
backend/app/repositories/: jobs.py  opportunities.py  scans.py  youtube.py
backend/app/services/: scout.py  youtube.py
backend/app/workers/: scout.py
backend/tests/: test_health.py  test_scout_routes.py  test_scout_worker.py
docs/decisions/: 0001-v4-lessons.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.test.tsx  App.tsx  app.css
frontend/src/features/scans/: api.ts
frontend/src/lib/: api.ts
supabase/: config.toml
supabase/functions/run-scout/: index.ts
supabase/migrations/: 202607050001_foundation.sql  202607050002_scout_scans.sql  202607080001_youtube_collection.sql  202607090001_opportunities.sql  202607100001_execution_experiments.sql  202607100002_experiment_results.sql  202607100003_production_drafts.sql  202607120001_llm_usage_events.sql  202607120002_llm_budget_settings.sql  202607120003_llm_provider_settings.sql  202607150001_decision_events.sql  202607150002_competitor_data.sql  202607150003_execution_plans.sql
(+1 files in other folders)
