[project]
name = "machine-backend"
version = "0.1.0"
description = "API and workers for IA Agent Tool"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.135,<0.136",
    "httpx>=0.28,<0.29",
    "pydantic-settings>=2.13,<3",
    "uvicorn[standard]>=0.41,<0.42",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<0.29",
    "pytest>=9,<10",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
